--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -2,5 +2,17 @@
 ---
 - import_playbook: web_playbook.yml
 - import_playbook: db_playbook.yml
-- import_playbook: ntp_playbook.yml
+- import_playbook: packages.yml
 - import_playbook: users_creation.yml
+  #- import_playbook: time_scychronization.yml 
+
+- name: Provisioning servers
+  hosts: all
+  become: yes
+  tasks:  
+    - name: MOTD File change
+      copy: 
+        content: '#THIS SERVER IS MANAGED BY ANSIBLE - NO MANUAL CHANGES#'
+        dest: /etc/motd
+    
+  
