--- a/file/web01/etc/chrony.conf
+++ b/file/web01/etc/chrony.conf
@@ -1,6 +1,9 @@
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (https://www.pool.ntp.org/join.html).
-pool 2.centos.pool.ntp.org iburst
+pool 0.north-america.pool.ntp.org iburst
+pool 1.north-america.pool.ntp.org iburst
+pool 2.north-america.pool.ntp.org iburst
+pool 3.north-america.pool.ntp.org iburst
 
 # Use NTP servers from DHCP.
 sourcedir /run/chrony-dhcp
@@ -51,3 +54,4 @@ logdir /var/log/chrony
 
 # Amazon Time Sync Service
 server 169.254.169.123 prefer iburst minpoll 4 maxpoll 4
+
