--- a/file/db01/etc/chrony.conf
+++ b/file/db01/etc/chrony.conf
@@ -1,10 +1,11 @@
-# Use public servers from the pool.ntp.org project.
+# Use public servers from the pool.ntp.org project
 # Please consider joining the pool (https://www.pool.ntp.org/join.html).
-pool 0.north-america.pool.ntp.org iburst
-pool 1.north-america.pool.ntp.org iburst
-pool 2.north-america.pool.ntp.org iburst
-pool 3.north-america.pool.ntp.org iburst
+server 0.cn.pool.ntp.org iburst
+server 1.cn.pool.ntp.org iburst
+server 2.cn.pool.ntp.org iburst
+server 3.cn.pool.ntp.org iburst
 
+#test
 # Use NTP servers from DHCP.
 sourcedir /run/chrony-dhcp
 
@@ -26,31 +27,5 @@ rtcsync
 #minsources 2
 
 # Allow NTP client access from local network.
-#allow 192.168.0.0/16
+#allow
 
-# Serve time even if not synchronized to a time source.
-#local stratum 10
-
-# Require authentication (nts or key option) for all NTP sources.
-#authselectmode require
-
-# Specify file containing keys for NTP authentication.
-keyfile /etc/chrony.keys
-
-# Save NTS keys and cookies.
-ntsdumpdir /var/lib/chrony
-
-# Insert/delete leap seconds by slewing instead of stepping.
-#leapsecmode slew
-
-# Get TAI-UTC offset and leap seconds from the system tz database.
-leapsectz right/UTC
-
-# Specify directory for log files.
-logdir /var/log/chrony
-
-# Select which information is logged.
-#log measurements statistics tracking
-
-# Amazon Time Sync Service
-server 169.254.169.123 prefer iburst minpoll 4 maxpoll 4
