FEATURE: Add handlers for restarting services in time synchronization playbook

--- a/file/db01/etc/chrony.conf
+++ b/file/db01/etc/chrony.conf
@@ -4,6 +4,7 @@ server 0.cn.pool.ntp.org iburst
 server 1.cn.pool.ntp.org iburst
 server 2.cn.pool.ntp.org iburst
 server 3.cn.pool.ntp.org iburst
+#testing hanlers2
 
 #test
 # Use NTP servers from DHCP.
