--- a/playbooks/6_time_synchronization.yml
+++ b/playbooks/6_time_synchronization.yml
@@ -59,12 +59,14 @@
       register: fetch_result
       when: ansible_distribution == "Ubuntu"
 
-    - name: Deploy ntp agent conf on centos
+    - name: Deploy ntp agent conf on CentOS
       template:
         src: templates/ntpconf_centos
         dest: /etc/chrony.conf
         backup: yes
       when: ansible_distribution == "CentOS"
+      notify:
+        - Restart Chrony on CentOS
 
     - name: Deploy ntp agent conf on Ubuntu
       template:
@@ -72,17 +74,8 @@
         dest: /etc/ntp.conf
         backup: yes
       when: ansible_distribution == "Ubuntu"
+      notify:
+        - Restart NTP on ubuntu
 
-    - name: Restart Chrony on CentOS
-      service:
-        name: chronyd
-        state: restarted
-        enabled: yes
-      when: ansible_distribution == "CentOS"
-
-    - name: Restart NTP on ubuntu
-      service:
-        name: ntp
-        state: restarted
-        enabled: yes
-      when: ansible_distribution == "Ubuntu"
+  handlers:
+    - import_tasks: handlers/main.yml
