--- a/playbooks/1_main.yml
+++ b/playbooks/1_main.yml
@@ -1,4 +1,3 @@
-#Main yaml
 ---
 - import_playbook: 2_print_facts.yml
 - import_playbook: 3_web_playbook.yml
@@ -10,10 +9,16 @@
 - name: Provisioning servers
   hosts: all
   become: yes
-  tasks:  
+  roles:
+    - role: post-install
+      vars:
+        ntp0: 0.asia.pool.ntp.org
+        ntp1: 1.asia.pool.ntp.org
+        ntp2: 2.asia.pool.ntp.org
+        ntp3: 3.asia.pool.ntp.org
+  tasks:
     - name: MOTD File change
-      copy: 
+      copy:
         content: '#THIS SERVER IS MANAGED BY ANSIBLE - NO MANUAL CHANGES#'
         dest: /etc/motd
-    
-  
+
